--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
     justify-content:space-around ;
     align-items: center;
     background-image: url(../img/bombonera.jpg);
-    background-repeat: no-repeat;
+    /* background-repeat: repeat; */
     background-size:cover;
 }
 
